--- a/RenderingEngine.vcxproj
+++ b/RenderingEngine.vcxproj
@@ -134,6 +134,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
+    <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="RException.cpp" />
@@ -145,6 +146,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="CustomWindows.h" />
+    <ClInclude Include="Graphics.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="resource.h" />
