--- a/RenderingEngine.vcxproj.filters
+++ b/RenderingEngine.vcxproj.filters
@@ -115,5 +115,8 @@
     <FxCompile Include="VertexShader.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="PixelShader.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
