--- a/RenderingEngine.vcxproj
+++ b/RenderingEngine.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="ConstantBuffers.h" />
     <ClInclude Include="CustomWindows.h" />
     <ClInclude Include="Drawable.h" />
+    <ClInclude Include="DrawableBase.h" />
     <ClInclude Include="dxerr.h" />
     <ClInclude Include="DxgiInfoManager.h" />
     <ClInclude Include="Graphics.h" />
