--- a/imgui.ini
+++ b/imgui.ini
@@ -14,17 +14,32 @@ Size=331,94
 Collapsed=1
 
 [Window][Camera]
-Pos=471,47
-Size=361,226
+Pos=57,338
+Size=361,191
 Collapsed=0
 
 [Window][Light]
-Pos=475,365
+Pos=453,215
 Size=309,292
 Collapsed=0
 
 [Window][Box 69]
 Pos=60,60
+Size=166,100
+Collapsed=0
+
+[Window][Boxes]
+Pos=60,60
+Size=292,77
+Collapsed=0
+
+[Window][Box 6]
+Pos=101,174
+Size=407,100
+Collapsed=0
+
+[Window][Box 2]
+Pos=89,310
 Size=166,100
 Collapsed=0
 
