better position representation for objects

--- a/imgui.ini
+++ b/imgui.ini
@@ -43,3 +43,13 @@ Pos=89,310
 Size=166,100
 Collapsed=0
 
+[Window][Box 7]
+Pos=60,60
+Size=166,100
+Collapsed=0
+
+[Window][Box 0]
+Pos=144,106
+Size=166,289
+Collapsed=0
+
