imgui window for both of the models

--- a/imgui.ini
+++ b/imgui.ini
@@ -54,12 +54,22 @@ Size=166,289
 Collapsed=0
 
 [Window][Model]
-Pos=33,20
-Size=305,212
+Pos=54,36
+Size=305,205
 Collapsed=0
 
 [Window][Raw Input]
 Pos=60,60
 Size=371,99
+Collapsed=0
+
+[Window][Model 2]
+Pos=241,46
+Size=227,186
+Collapsed=0
+
+[Window][Model 1]
+Pos=15,44
+Size=220,188
 Collapsed=0
 
