--- a/RenderingEngine.vcxproj
+++ b/RenderingEngine.vcxproj
@@ -193,6 +193,7 @@
     <ClInclude Include="Color.h" />
     <ClInclude Include="ConditionalNoexcept.h" />
     <ClInclude Include="ConstantBuffers.h" />
+    <ClInclude Include="ConstantBuffersEx.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="CustomWindows.h" />
     <ClInclude Include="Drawable.h" />
