--- a/RenderingEngine.vcxproj
+++ b/RenderingEngine.vcxproj
@@ -216,6 +216,7 @@
     <ClInclude Include="InputLayout.h" />
     <ClInclude Include="json.hpp" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="LayoutCodex.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="PixelShader.h" />
